2005-09-29  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/ExportVCalendar.py: Removed unused code
	* src/plugins/ExportVCard.py: Removed unused code
	* src/plugins/ImportGeneWeb.py: Removed unused code
	* src/plugins/ImportvCard.py: Removed unused code
	* src/plugins/TestcaseGenerator.py: Removed unused code
	* src/plugins/WriteGeneWeb.py: Removed unused code
	
2005-09-29  Don Allingham  <don@gramps-project.org>
	* src/WriteGedcom.py: handle broken family
	* src/ReportUtils.py: fix born_str to not depend on death date
	* example/gedcom/sample.ged: remove broken refererence (I01)

2005-09-29  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/ImportGeneWeb.py: convert witout using latin_utf8.py
	* src/plugins/ImportvCard.py: remove unused latin_utf8.py include
	* src/plugins/TestcaseGenerator.py: remove unused latin_utf8.py include

2005-09-28  Don Allingham  <don@gramps-project.org>
	* src/NameDisplay.py: Add display_formal
	* src/Report.py: remove generation strings
	* src/docgen/OpenOfficeDoc.py: Fix leading space after tab.
	* src/plugins/AncestorReport.py: Use ReportUtils strings
	instead of local strings

2005-09-28  Eero Tamminen  <eerot@sf>
	* src/po/fi.po: Translation update for 2.0.9.
p
2005-09-28  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/TestcaseGenerator.py: Use new tool/option api 

2005-09-27  Don Allingham  <don@gramps-project.org>
	* src/ReadXML.py: store then restore read only flag on load

2005-09-26  Alex Roitman  <shura@gramps-project.org>
	* all reports: switch categories from const to Report module.
	* src/const.py.in: Remove report and tool categories.
	* src/Plugins.py: Switch report and tool category constants.
	* src/PluginMgr.py: Switch report and tool category constants.
	* src/Report.py, src/Tool.py: Move constants.
	* src/plugins/ChangeNames.py, src/plugins/ChangeTypes.py,
	src/plugins/Checkpoint.py: switch category constants.	

2005-09-26  Don Allingham  <don@gramps-project.org>